--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         </section>
       </section>
     </section>
-
+    <button class="reset">Reset</button>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
