--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,6 @@
     </section>
     <button class="reset">Reset</button>
     <script src="/main.js" charset="utf-8"></script>
+    <script src="confetti.js"></script>
   </body>
 </html>
