--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <h1>My Score Board</h1>
+    <section class="half">
+      <div class="first-div">
+        <button class="start-first">Start 1st Half</button>
+        <h4 class="first">1st Half</h4>
+      </div>
+      <div class="second-div">
+        <button class="start-second">Start 2nd Half</button>
+        <h4 class="second">2nd Half</h4>
+      </div>
+    </section>
     <section class="teams">
       <section class="team one">
         <section>
