started with some css

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1>My Score Board</h1>
+    <h1>Camp Nou</h1>
     <section class="half">
       <div class="first-div">
         <button class="start-first">Start 1st Half</button>
@@ -27,12 +27,14 @@
         </section>
         <section>
           <section>
-            update team 1 name
-            <input type="text" class="team-1-input" />
+            <input
+              type="text"
+              class="team-1-input"
+              placeholder="Team Name Here"
+            />
             <button class="update-team-1-name">Update</button>
           </section>
           <section>
-            update team 1 score
             <button class="team-1-add-1-button">add 1</button>
             <button class="team-1-subtract-1-button">subtract 1</button>
           </section>
@@ -46,12 +48,14 @@
 
         <section>
           <section>
-            update team 2 name
-            <input type="text" class="team-2-input" />
+            <input
+              type="text"
+              class="team-2-input"
+              placeholder="Team Name Here"
+            />
             <button class="update-team-2-name">Update</button>
           </section>
           <section>
-            update team 2 score
             <button class="team-2-add-1-button">add 1</button>
             <button class="team-2-subtract-1-button">subtract 1</button>
           </section>
